--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-	"name": "advent-of-code-2023",
-	"version": "1.0.0",
-	"description": "My JavaScript solutions for the [Advent of Code 2023](https://adventofcode.com/2023) programming puzzles.",
-	"type": "module",
-	"scripts": {
-		"start:day": "node scripts/start-day.js",
-		"puzzle": "node scripts/run-puzzle.js",
-		"get:input": "node scripts/get-input.js",
-		"add:star": "node scripts/add-star.js",
-		"continue:day": "node scripts/continue-day.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/mawrkus/advent-of-code-2023.git"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/mawrkus/advent-of-code-2023/issues"
-	},
-	"homepage": "https://github.com/mawrkus/advent-of-code-2023#readme",
-	"dependencies": {
-		"cheerio": "^1.0.0-rc.12",
-		"dotenv": "^16.0.3",
-		"node-fetch": "^3.3.0"
-	}
+  "name": "advent-of-code-2023",
+  "version": "1.0.0",
+  "description": "My JavaScript solutions for the [Advent of Code 2023](https://adventofcode.com/2023) programming puzzles.",
+  "type": "module",
+  "scripts": {
+    "start:day": "node scripts/start-day.js",
+    "get:input": "node scripts/get-input.js",
+    "post:input": "node scripts/post-input.js",
+    "continue:day": "node scripts/continue-day.js",
+    "finish:day": "node scripts/finish-day.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mawrkus/advent-of-code-2023.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mawrkus/advent-of-code-2023/issues"
+  },
+  "homepage": "https://github.com/mawrkus/advent-of-code-2023#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.0.3",
+    "node-fetch": "^3.3.0"
+  }
 }
